# TX7709

./: README.md
AgentsTX/: document_analyzer5.py  pyproject.toml  rag_test4.py
Lightrag/: Dockerfile
Lightrag/Docker Postgre Pgvector+AGE/: Dockerfile  enable-extensions.sql  modify-config.sh
Lightrag/chart/: Chart.yaml  values.yaml
Lightrag/chart/templates/: _helpers.tpl  configmap.yaml  deployment-lightrag.yaml  deployment-postgres.yaml  ingress.yaml  pvc-lightrag.yaml  pvc-postgres.yaml  secret.yaml  service-lightrag.yaml  service-postgres.yaml  serviceaccount.yml
TXEvaluation/: eval.ipynb  main.py  pyproject.toml  truth.json
TXEvaluation/rag/: keywords_inference.py
TXRAG/: playground.ipynb  pyproject.toml
TXRAG/inferers/: base_db.py  json_db.py
TXRAG/loaders/: create_index.py
jupyter (openwebui)/: Dockerfile
k8s (helm)/: values-flowise.yaml  values-n8n.yaml  values-openwebui.yaml
pipelines/: Dockerfile
