[project]
name = "agentstx7709"
version = "0.1.0"
description = "Creation of langgraph agents for the course"
authors = [
    {name = "Raph", email = "94909118+Ryustiel@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "raphlib @ git+https://github.com/Ryustiel/RaphLib.git",
    "ragraph @ git+https://github.com/Ryustiel/Ragraph.git",
    "clients @ git+https://github.com/Ryustiel/Clients.git",
    "psycopg[binary]",
    "langchain-openai>=0.3.16",
    "tiktoken>=0.9.0",
    "nest-asyncio>=1.6.0",
    "langchain-ollama>=0.3.3",
    "black>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "python-dotenv"
]
